--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-29 [俄乌战争僵持依旧，泽连斯基筹划“全面计划”结束战争](/articles/voa/1014478.md)
+
 6-29 [伊朗总统大选即将进入第二轮投票，改革派与保守派候选人一争输赢](/articles/voa/1014479.md)
 
 6-29 [专访胡平：从一党到一人 习近平如何登上专制巅峰？](/articles/voa/1014480.md)
@@ -598,6 +600,4 @@
 6-18 [欧盟敦促中国停止打压人权](/articles/voa/1014776.md)
 
 6-18 [普京解除俄国防部四名副部长职务，取代者包括其“近亲”](/articles/voa/1014777.md)
-
-6-18 [北约秘书长寻求让中国为支持俄罗斯而面临后果，并称让武器稳定流入乌克兰是止战唯一途径](/articles/voa/1014778.md)
 
