--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-30 [台湾歌手在著名音乐奖活动中说“不忘天安门”](/articles/voa/1014476.md)
+
 6-30 [台湾驳斥中国外交官卢沙野涉台言论，重申台湾主权独立两岸互不隶属](/articles/voa/1014477.md)
 
 6-29 [俄乌战争僵持依旧，泽连斯基筹划“全面计划”结束战争](/articles/voa/1014478.md)
@@ -598,6 +600,4 @@
 6-18 [美国医务总监：社交媒体需增加警告标签](/articles/voa/1014774.md)
 
 6-18 [拜登将宣布对美国公民配偶的驱逐保护和工作许可](/articles/voa/1014775.md)
-
-6-18 [欧盟敦促中国停止打压人权](/articles/voa/1014776.md)
 
