--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-30 [斯恺文艺｜在外国的中国人学校](/articles/cdt/339250.md)
+
+6-30 [城市的地得｜“家属和记者取得联系”：记者的退场意味深长](/articles/cdt/339251.md)
+
 6-30 [【404文库】夏星繁｜洒泪祭雄杰：痛悼江苏苏州见义勇为的英雄胡友平女士](/articles/cdt/339267.md)
 
 6-29 [【404文库】i看见｜日本人学校，间谍学校？](/articles/cdt/339271.md)
@@ -596,8 +600,4 @@
 5-23 [Lola｜边疆、民族与宗教：在佛的光辉下](/articles/cdt/340428.md)
 
 5-23 [维舟的方舟｜支持那些值得支持的人](/articles/cdt/340430.md)
-
-5-23 [【404文库】何加盐｜中文互联网正在加速崩塌](/articles/cdt/340432.md)
-
-5-30 [【CDTV】“警察暴力执法是吧？还暴不暴？还暴不暴？”](/articles/cdt/340433.md)
 
