--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-30 [官员们说，俄罗斯导弹攻击乌克兰城镇打死七人](/articles/voa/1014473.md)
+
+6-30 [秘鲁过渡总统争议声中访华 北京强化地缘政治影响力](/articles/voa/1014474.md)
+
 6-30 [俄罗斯加紧攻击乌克兰，并向西方发出新威胁](/articles/voa/1014475.md)
 
 6-30 [台湾歌手在著名音乐奖活动中说“不忘天安门”](/articles/voa/1014476.md)
@@ -596,8 +600,4 @@
 6-18 [普京赞扬朝鲜“坚定支持”莫斯科在乌克兰的“特别军事行动”](/articles/voa/1014771.md)
 
 6-18 [英国大选在即：BNO港人影响力显现，候选人纷纷表态支持](/articles/voa/1014772.md)
-
-6-18 [以色列总理解散战时内阁,美国称将继续与内塔尼亚胡接触](/articles/voa/1014773.md)
-
-6-18 [美国医务总监：社交媒体需增加警告标签](/articles/voa/1014774.md)
 
