--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-30 [法国举行首轮议会选举 极右翼势力可能入主政府](/articles/voa/1014470.md)
+
 6-30 [中国发布稀土管理法规 谋求牢牢掌控战略资源](/articles/voa/1014471.md)
 
 6-30 [加沙停火谈判无进展，加沙城爆发战斗](/articles/voa/1014472.md)
@@ -598,6 +600,4 @@
 6-18 [韩朝非军事区地雷爆炸，朝鲜士兵两周内二度越过分界线](/articles/voa/1014768.md)
 
 6-18 [澳大利亚对中国投资关键矿产心存疑虑之际 李强访问矿产丰富的西澳](/articles/voa/1014769.md)
-
-6-18 [北约秘书长:逾20盟国今年实现国防开支目标](/articles/voa/1014770.md)
 
