--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,14 @@
 德国之声
 ------
 
+6-30 [台湾女歌手在金曲奖颁奖典礼上呼吁不要忘记“天安门事件”](/articles/dw/1025044.md)
+
+6-30 [德国离婚率降至1990年以来最低水平](/articles/dw/1025045.md)
+
+6-30 [世卫组织：全球18亿人因缺乏运动而面临健康风险](/articles/dw/1025046.md)
+
+6-30 [法国议会选举：又一个欧洲大国向右转？](/articles/dw/1025047.md)
+
 6-30 [习近平下周出访哈萨克斯坦和塔吉克斯坦](/articles/dw/1025048.md)
 
 6-30 [美国大选电视辩论 选民意兴阑珊](/articles/dw/1025049.md)
@@ -592,12 +600,4 @@
 6-4 [枪指中国海警?菲律宾驳斥](/articles/dw/1025342.md)
 
 6-4 [重修美柬关系？美国防部长奥斯汀访问金边](/articles/dw/1025343.md)
-
-6-4 [天安门母亲喊话习近平：六四是绕不过去的历史悲剧](/articles/dw/1025344.md)
-
-6-4 [民调：21%的德国人希望国足多些白人球员](/articles/dw/1025345.md)
-
-6-4 [六四网禁：德国大使馆的蜡烛再次被“吹灭”](/articles/dw/1025346.md)
-
-6-4 [台湾政坛领袖纪念六四35周年](/articles/dw/1025347.md)
 
