--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-30 [以军在加沙南北发动新攻势，以财政部延长与巴勒斯坦银行间合作](/articles/voa/1014463.md)
+
 6-30 [三中全会之财税改革篇：地方要钱、民间要减税，中共可能加税](/articles/voa/1014464.md)
 
 6-30 [硅谷加大员工安全审查防范中国间谍威胁](/articles/voa/1014465.md)
@@ -598,6 +600,4 @@
 6-18 [中国解放军094核潜艇现踪台海 分析:闪避美日侦搜](/articles/voa/1014761.md)
 
 6-18 [中国出口电动车遭遇多方抵制，巴菲特大量减持比亚迪股票引全球关注](/articles/voa/1014762.md)
-
-6-18 [北京对美国会代表团会晤达赖喇嘛以及拜登可能签署涉藏法案表达不满](/articles/voa/1014763.md)
 
