--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-1 [法国议会选举：极右派国民联盟居于领先](/articles/dw/1025042.md)
+
 6-30 [中国民营航天公司天龙三号液体运载火箭试车失败](/articles/dw/1025043.md)
 
 6-30 [台湾女歌手在金曲奖颁奖典礼上呼吁不要忘记“天安门事件”](/articles/dw/1025044.md)
@@ -598,6 +600,4 @@
 6-4 [欧中月球合作 是否面临政治风险？](/articles/dw/1025340.md)
 
 6-4 [达赖喇嘛本月将前往美国接受治疗](/articles/dw/1025341.md)
-
-6-4 [枪指中国海警?菲律宾驳斥](/articles/dw/1025342.md)
 
