--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-1 [如何挽回一场失败的辩论？拜登团队的疯狂48小时](/articles/nyt/1042628.md)
+
 7-1 [特朗普的贸易战“第二季”要怎么打](/articles/nyt/1042629.md)
 
 6-28 [关于首场总统大选辩论，你应该知道的六个要点](/articles/nyt/1042630.md)
@@ -598,6 +600,4 @@
 3-22 [人工智能竞争中，中国人才培育赶超美国](/articles/nyt/1042926.md)
 
 3-22 [主创谈网飞版《三体》：中国元素为何大幅减少？](/articles/nyt/1042927.md)
-
-3-22 [禁忌中的烈欲：中国酷儿艺术家西亚蝶在剪纸中追寻自由](/articles/nyt/1042928.md)
 
