--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-1 [美最高法院将裁决特朗普豁免权案](/articles/voa/1014453.md)
+
+7-1 [美日韩军演后朝鲜发射两枚导弹 其中一枚疑似试射失败或落入内陆](/articles/voa/1014454.md)
+
 7-1 [极端正统犹太人在耶路撒冷抗议以军征召，引发暴力](/articles/voa/1014455.md)
 
 7-1 [香港监察呼吁英国政府再次扩大BN(O)签证 让部分1997前出生人士有资格申请](/articles/voa/1014456.md)
@@ -596,8 +600,4 @@
 6-19 [布林肯：中国对俄罗斯国防工业基础的支持“必须停止”](/articles/voa/1014751.md)
 
 6-19 [尽管进口下降，但中国提高了在德国电动汽车市场的份额](/articles/voa/1014752.md)
-
-6-19 [拜登为美国公民的无证配偶开辟了获得公民身份的途径](/articles/voa/1014753.md)
-
-6-19 [“走线”非法移民激增 厄瓜多尔暂停对中国公民免签](/articles/voa/1014754.md)
 
