--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-1 [拜登辩论表现不佳引发美国盟友焦虑](/articles/nyt/1042627.md)
+
 7-1 [如何挽回一场失败的辩论？拜登团队的疯狂48小时](/articles/nyt/1042628.md)
 
 7-1 [特朗普的贸易战“第二季”要怎么打](/articles/nyt/1042629.md)
@@ -598,6 +600,4 @@
 3-22 [苹果“四面楚歌”，在四大洲面临诉讼和挑战](/articles/nyt/1042925.md)
 
 3-22 [人工智能竞争中，中国人才培育赶超美国](/articles/nyt/1042926.md)
-
-3-22 [主创谈网飞版《三体》：中国元素为何大幅减少？](/articles/nyt/1042927.md)
 
