--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-1 [国安新规生效入境中国可能随时被查验手机电脑](/articles/voa/1014450.md)
+
 7-1 [中国制造业活动增速创三年来新高](/articles/voa/1014451.md)
 
 7-1 [香港主权移交中国27周年 北京欲赠大熊猫以提振香港形象](/articles/voa/1014452.md)
@@ -598,6 +600,4 @@
 6-19 [美参议员：美国需要“加大力度”追踪中国科技努力](/articles/voa/1014748.md)
 
 6-19 [针对欧盟电动车关税 中国选择报复欧洲农民而非汽车制造商](/articles/voa/1014749.md)
-
-6-19 [“大外宣”从中央走向地方 专家：中国的问题并不在呈现方式](/articles/voa/1014750.md)
 
