--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-1 [避免富士山客满为患，观光客即日起须购买门票才能登山](/articles/voa/1014443.md)
+
 7-1 [中国救房市出奇招 算盘打到农村宅基地上](/articles/voa/1014444.md)
 
 7-1 [中国将052D舰改成海警船? 分析：中国海警恐常态化远航](/articles/voa/1014445.md)
@@ -598,6 +600,4 @@
 6-19 [经济下行与政治压力下中国中产阶级掀起“出走潮”](/articles/voa/1014741.md)
 
 6-19 [尼日尔局势动荡导致中石油巨额石油项目陷于停滞](/articles/voa/1014742.md)
-
-6-19 [普京抵达朝鲜开启备受争议的访问 金正恩热情迎接](/articles/voa/1014743.md)
 
