--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-2 [以色列要求平民撤离加沙南部的汗尤尼斯](/articles/voa/1014433.md)
+
 7-2 [美国最高法院：特朗普在选举干预案中拥有广泛豁免权](/articles/voa/1014434.md)
 
 7-2 [在整体经济放缓的背景下，中国小型企业的工厂活动有所增加](/articles/voa/1014435.md)
@@ -598,6 +600,4 @@
 6-19 [普京金正恩紧密互动，北京保持距离](/articles/voa/1014731.md)
 
 6-19 [普京与金正恩签署全面战略合作条约，俄朝关系大幅提升](/articles/voa/1014732.md)
-
-6-19 [教宗方济各再向中国示好，呼吁为中国人民祷告](/articles/voa/1014733.md)
 
