--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-2 [中国推出以旧换新补贴刺激消费，民众不买账](/articles/nyt/1042625.md)
+
 7-1 [拜登家人敦促其抵抗退选压力，保持斗志继续竞选](/articles/nyt/1042626.md)
 
 7-1 [拜登辩论表现不佳引发美国盟友焦虑](/articles/nyt/1042627.md)
@@ -598,6 +600,4 @@
 3-25 [莫斯科恐袭粉碎普京对俄罗斯人的安全承诺](/articles/nyt/1042923.md)
 
 3-25 [凯特王妃：生活在公众显微镜下的癌症病患](/articles/nyt/1042924.md)
-
-3-22 [苹果“四面楚歌”，在四大洲面临诉讼和挑战](/articles/nyt/1042925.md)
 
