--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-2 [南方周末｜“校车阿姨”胡友平](/articles/cdt/339193.md)
+
+7-2 [七叶星｜美军偷小麦——咱能别这么弱智吗？](/articles/cdt/339198.md)
+
 7-2 [每日一语 2024.7.1](/articles/cdt/339204.md)
 
 7-2 [南都周刊｜火箭坠落背后的民营航天企业](/articles/cdt/339206.md)
@@ -596,8 +600,4 @@
 5-25 [【404文库】大国院士｜郑树森院士被国际期刊终身禁稿](/articles/cdt/340365.md)
 
 5-25 [星球商业评论｜三万人只出了一个“万元户”](/articles/cdt/340368.md)
-
-5-25 [谷雨实验室｜逃离杨永信16年，他的人生还停在被电击的那一刻](/articles/cdt/340372.md)
-
-5-25 [常识和洞见｜挣扎生活的年轻人，不是“群魔”](/articles/cdt/340375.md)
 
