--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-2 [竹不倒｜看你需要，他们的立场可以随时改变，这就是无底线！](/articles/cdt/339190.md)
+
 7-2 [南方周末｜“校车阿姨”胡友平](/articles/cdt/339193.md)
 
 7-2 [七叶星｜美军偷小麦——咱能别这么弱智吗？](/articles/cdt/339198.md)
@@ -598,6 +600,4 @@
 5-25 [歪脑｜贾葭：昨日世界的崩塌 如飞蛾扑火般的个人史](/articles/cdt/340362.md)
 
 5-25 [【404文库】大国院士｜郑树森院士被国际期刊终身禁稿](/articles/cdt/340365.md)
-
-5-25 [星球商业评论｜三万人只出了一个“万元户”](/articles/cdt/340368.md)
 
