--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+7-2 [特朗普的又一次胜利：最高法院裁定其公职行为享有豁免权](/articles/dw/1025025.md)
+
+7-2 [朝鲜称成功试射新型导弹 韩国质疑](/articles/dw/1025026.md)
+
 7-2 [留學生抗議謝鋒遭拖出場 美議員質疑哈佛](/articles/dw/1025027.md)
 
 7-2 [中方駁美限制對華投資先進技術：無助AI發展](/articles/dw/1025028.md)
@@ -596,8 +600,4 @@
 6-6 [德国又有政界人士竞选活动中遭到袭击](/articles/dw/1025323.md)
 
 6-6 [普京：俄罗斯没有“帝国野心”](/articles/dw/1025324.md)
-
-6-6 [国际能源署：2024年清洁能源投资将达2万亿美元](/articles/dw/1025325.md)
-
-6-6 [连日暴雨令德国南部洪涝成灾](/articles/dw/1025326.md)
 
