--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-2 [习近平访问哈萨克斯坦，出席上合组织峰会](/articles/voa/1014421.md)
+
 7-2 [中国拟议中的《金融稳定法》是什么？](/articles/voa/1014422.md)
 
 7-2 [拜登抨击美国最高法院关于特朗普豁免权案的裁决](/articles/voa/1014423.md)
@@ -598,6 +600,4 @@
 6-20 [联合国人权高专办：以色列对加沙的空袭可能违反了“战争法”](/articles/voa/1014719.md)
 
 6-20 [推特上的中国：厄瓜多尔不再对中国人免签，“走线”时代结束？](/articles/voa/1014720.md)
-
-6-20 [美国务卿与菲外长通话，讨论中国“在南中国海针对菲律宾的升级行动”](/articles/voa/1014721.md)
 
