--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+7-2 [外国法官辞职引争议 香港商法大环境受质疑](/articles/dw/1025023.md)
+
+7-2 [入狱四个月 特朗普盟友班农开始服刑](/articles/dw/1025024.md)
+
 7-2 [特朗普的又一次胜利：最高法院裁定其公职行为享有豁免权](/articles/dw/1025025.md)
 
 7-2 [朝鲜称成功试射新型导弹 韩国质疑](/articles/dw/1025026.md)
@@ -596,8 +600,4 @@
 6-6 [林培瑞：我们为什么记得六四？](/articles/dw/1025321.md)
 
 6-6 [诺曼底登陆80周年的风云变幻](/articles/dw/1025322.md)
-
-6-6 [德国又有政界人士竞选活动中遭到袭击](/articles/dw/1025323.md)
-
-6-6 [普京：俄罗斯没有“帝国野心”](/articles/dw/1025324.md)
 
