--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+7-11 [美国加强太平洋空中力量的计划被视为旨在制衡中国](/articles/voa/1014205.md)
+
+7-11 [法国总统马克龙寻求打破法国政治僵局](/articles/voa/1014206.md)
+
+7-11 [一些民主党人仍不确定拜登是否应继续竞选总统](/articles/voa/1014207.md)
+
 7-11 [中国的垃圾填埋场堆满纺织废料：快时尚盛行而回收再利用无人问津](/articles/voa/1014208.md)
 
 7-11 [拜登与特朗普均支持对华增加关税，美中贸易的未来何去何从?](/articles/voa/1014209.md)
@@ -594,10 +600,4 @@
 6-29 [普京赠与金正恩的豪华轿车内置多种韩国零件](/articles/voa/1014503.md)
 
 6-29 [波兰可能在七月前与乌克兰签署双边安全协议](/articles/voa/1014504.md)
-
-6-28 [拜登与特朗普在涉华关税上争功 中国官媒网民热议](/articles/voa/1014505.md)
-
-6-28 [喊“中国经济不能下猛药” 李强言论为何遭下架？](/articles/voa/1014506.md)
-
-6-28 [韩国发布视频驳斥朝鲜导弹试射成功的说法](/articles/voa/1014507.md)
 
