--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-11 [暴力事件激增，巴基斯坦中资项目面临安全挑战](/articles/nyt/1042595.md)
+
 7-10 [莫迪访问俄罗斯，彰显西方孤立普京策略失败](/articles/nyt/1042596.md)
 
 7-10 [如何挽回一场失败的辩论？拜登团队的疯狂48小时](/articles/nyt/1042597.md)
@@ -598,6 +600,4 @@
 4-2 [关于莫迪治下的印度经济，你应该知道的](/articles/nyt/1042893.md)
 
 4-2 [《奥本海默》在日本上映，引发争议与反思](/articles/nyt/1042894.md)
-
-4-2 [林奇之死：网飞《三体》背后的离奇投毒案](/articles/nyt/1042895.md)
 
