--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+7-11 [客座評論：立法能解決博愛座引起的世代對立嗎？](/articles/dw/1024934.md)
+
+7-11 [北約首稱中國為「關鍵縱容者」 中方提嚴正交涉](/articles/dw/1024935.md)
+
 7-11 [赛前禁欲？床上运动有助运动员临场发挥](/articles/dw/1024936.md)
 
 7-10 [中国泳队涉禁药事件调查：结果公布仍被质疑](/articles/dw/1024937.md)
@@ -596,8 +600,4 @@
 6-14 [台积电德国工厂今秋开建 德东地区借力升级](/articles/dw/1025232.md)
 
 6-14 [欧中人权对话在即 欧盟发布年度香港报告](/articles/dw/1025233.md)
-
-6-14 [G7将利用被冻结的俄资产利息作为担保向乌克兰放贷500亿](/articles/dw/1025234.md)
-
-6-14 [欧盟盟歌——贝多芬欢乐颂](/articles/dw/1025235.md)
 
