--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-11 [北约扩大支持力度 开始向乌克兰交付F-16战斗机](/articles/voa/1014198.md)
+
 7-11 [台湾国防部：66架次中国军机在台湾周边活动 创今年单日纪录](/articles/voa/1014199.md)
 
 7-11 [中国流亡商人郭文贵欺诈案进入结案陈词阶段](/articles/voa/1014200.md)
@@ -598,6 +600,4 @@
 6-29 [中国对澳大利亚单方面免签后 澳大利亚维持对中国的旅行警告](/articles/voa/1014496.md)
 
 6-29 [吉林大学外籍教授被驱逐，“妄议”中央的下场](/articles/voa/1014497.md)
-
-6-29 [中国女子救两名日本人后身亡，引发社媒哀悼和对民族主义的谴责](/articles/voa/1014498.md)
 
