--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-11 [中印边境争端：为何两国因“不毛之地”纷争不休](/articles/nyt/1042592.md)
+
 7-11 [我爱拜登，但他是时候退出了](/articles/nyt/1042593.md)
 
 7-11 [北约首次公开谴责中国为俄罗斯提供军事支持](/articles/nyt/1042594.md)
@@ -598,6 +600,4 @@
 4-3 [美国财长耶伦将再次访华，进行高级别会谈](/articles/nyt/1042890.md)
 
 4-3 [拜登与习近平通话，谈及台湾、贸易、TikTok等问题](/articles/nyt/1042891.md)
-
-4-3 [台湾发生7.4级强震，日本发出海啸预警](/articles/nyt/1042892.md)
 
