--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-11 [21世纪经济报道｜油罐车轨迹查询功能下架](/articles/cdt/338980.md)
+
 7-11 [罗翔说刑法｜离开了对人的尊重，一切罪恶都是有可能的](/articles/cdt/338983.md)
 
 7-11 [每日一语 2024.7.10](/articles/cdt/338990.md)
@@ -598,6 +600,4 @@
 6-2 [【CDT报告汇·六四35周年】大声专访吴仁华：天安门事件35周年，再追问屠杀与镇压（三）](/articles/cdt/340132.md)
 
 6-2 [【CDT报告汇·六四35周年】大声专访吴仁华：天安门事件35周年，再追问屠杀与镇压（二）](/articles/cdt/340134.md)
-
-6-2 [【历史上的今天】澎湃全媒体实验室｜上海：61天，61人](/articles/cdt/340136.md)
 
