--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-11 [北约宣言指中国是俄乌战争“决定性助推者”，中国外交部反呛“甩锅嫁祸”](/articles/voa/1014190.md)
+
 7-11 [中国对“四大”会计事务所在中国的审计工作进行严查](/articles/voa/1014191.md)
 
 7-11 [洞庭湖决堤之后，重庆暴雨成灾致六死，神曲“习主席你在哪里”爆红](/articles/voa/1014192.md)
@@ -598,6 +600,4 @@
 6-29 [澳大利亚外交官称增加AUKUS合作伙伴是“复杂的](/articles/voa/1014488.md)
 
 6-29 [肯尼亚致命抗议源自债务困境，中国或西方借贷机构，究竟谁之过？](/articles/voa/1014489.md)
-
-6-29 [洛杉矶“六四”抗议活动参与者家属在中国遭警方登门警告](/articles/voa/1014490.md)
 
