--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,9 +3,11 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-12 [【404文库】倪刃｜对提问禁言的时代](/articles/cdt/338971.md)
+
 7-11 [【404文库】哔哩哔哩｜UP主挖出油罐车半年行驶轨迹](/articles/cdt/338978.md)
 
-7-11 [21世纪经济报道｜油罐车轨迹查询功能下架](/articles/cdt/338980.md)
+7-11 [【404文库】21世纪经济报道｜油罐车轨迹查询功能下架](/articles/cdt/338980.md)
 
 7-11 [罗翔说刑法｜离开了对人的尊重，一切罪恶都是有可能的](/articles/cdt/338983.md)
 
@@ -598,6 +600,4 @@
 6-2 [【404文库】联合早报｜《南都周刊》员工签名挽留长平](/articles/cdt/340119.md)
 
 6-2 [每日一语 2024.6.1](/articles/cdt/340129.md)
-
-6-2 [【CDT报告汇·六四35周年】大声专访吴仁华：天安门事件35周年，再追问屠杀与镇压（三）](/articles/cdt/340132.md)
 
