--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-12 [美国将对在中国制造的墨西哥金属征收关税](/articles/nyt/1042588.md)
+
 7-12 [北约对中国的公开谴责意味着什么](/articles/nyt/1042589.md)
 
 7-12 [化工油罐车混运食用油，中国再爆食品安全丑闻](/articles/nyt/1042590.md)
@@ -598,6 +600,4 @@
 4-8 [关税、制裁、跨境投资：盘点耶伦访华之际中美争议性问题](/articles/nyt/1042886.md)
 
 4-4 [台湾25年来最强地震：余震不断，官方提示居民保持警惕](/articles/nyt/1042887.md)
-
-4-3 [书评：我们距离下一次世界大战有多远](/articles/nyt/1042888.md)
 
