--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,16 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-12 [南方周末｜警权“扩”与“限”：治安管理处罚法大修，十万人提出建议](/articles/cdt/338954.md)
+
+7-12 [三联生活周刊｜女清洁工消失在垃圾压缩箱](/articles/cdt/338957.md)
+
+7-12 [群己论实｜新京报记者韩福涛危险了](/articles/cdt/338962.md)
+
+7-12 [朵尔日记｜食用油里掺入煤油对身体有多大危害？](/articles/cdt/338964.md)
+
+7-12 [老牌恶棍｜新京报，一夜之间成了汉奸](/articles/cdt/338966.md)
+
 7-12 [每日一语 2024.7.11](/articles/cdt/338968.md)
 
 7-12 [【404文库】关不羽的绣花针｜吓坏全国人民的中储粮，妥妥的草台班子](/articles/cdt/338969.md)
@@ -590,14 +600,4 @@
 6-3 [木蹊说｜铁头撒尿的“勇气”，是被逼出来的](/articles/cdt/340099.md)
 
 6-3 [吃瓜体｜国防大学将军喊话泽连斯基：要考虑乌克兰人民的价值……](/articles/cdt/340104.md)
-
-6-3 [阿强同志｜眼睁睁看着泰国人把同性恋的钱挣走了](/articles/cdt/340107.md)
-
-6-3 [网易新闻｜武汉大学教授调研：地方治理信用透支已成常态，政府成当地最大“老赖”](/articles/cdt/340109.md)
-
-6-3 [兽爷｜消失的独角兽](/articles/cdt/340112.md)
-
-6-3 [【404媒体】“要么在来的路上被拒之门外；要么被压在仓库里，落满了灰尘；抑或是早早就被扼杀于脑海和案头”(外二篇）](/articles/cdt/340115.md)
-
-6-2 [每日一语 2024.6.2](/articles/cdt/340117.md)
 
