--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+7-12 [中国六月银行新增贷款数据令人失望，路透：多项关键数据创新低](/articles/voa/1014158.md)
+
+7-12 [乌克兰总检察长要求国际刑事法院对俄罗斯袭击基辅儿童医院进行战争罪行起诉](/articles/voa/1014159.md)
+
+7-12 [中国大型代表团出席台北旅展释回暖信号？ 分析：没有太多乐观空间](/articles/voa/1014160.md)
+
 7-12 [习近平、李强分别会晤所罗门群岛总理，两国走近让美国及其太平洋盟友担忧](/articles/voa/1014161.md)
 
 7-12 [中国与白俄罗斯联演秀 分析：伤害性不大，但污辱性极强](/articles/voa/1014162.md)
@@ -594,10 +600,4 @@
 7-1 [香港监察呼吁英国政府再次扩大BN(O)签证 让部分1997前出生人士有资格申请](/articles/voa/1014456.md)
 
 7-1 [俄罗斯攻击哈尔科夫，打死一人，打伤八人](/articles/voa/1014457.md)
-
-7-1 [极右翼国民联盟在法国首轮议会选举中强劲领先](/articles/voa/1014458.md)
-
-7-1 [韩国：朝鲜在其东海岸发射了一枚弹道导弹](/articles/voa/1014459.md)
-
-7-1 [内塔尼亚胡在停火谈判停滞时誓言“胜利”](/articles/voa/1014460.md)
 
