--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-13 [众院通过法案禁止非公民投票，投票权倡导者：此举无必要且有恐吓作用](/articles/voa/1014150.md)
+
 7-13 [中共20届三中全会将在对消费疲软、产能过剩的担忧中召开](/articles/voa/1014151.md)
 
 7-13 [北约峰会闭幕之际再次强调对乌克兰的安全保障](/articles/voa/1014152.md)
@@ -598,6 +600,4 @@
 7-1 [聿文视界：三中全会前，中南海对官员再勒紧政治绞索](/articles/voa/1014448.md)
 
 7-1 [法国首轮议会选举中极右翼取得历史性胜利](/articles/voa/1014449.md)
-
-7-1 [国安新规生效入境中国可能随时被查验手机电脑](/articles/voa/1014450.md)
 
