--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+7-13 [中国称与俄罗斯举行联合军演](/articles/voa/1014146.md)
+
+7-13 [美众院台湾连线两党领袖谴责中国“惩治台独”新规](/articles/voa/1014147.md)
+
+7-13 [北约华盛顿峰会宣言开启了北约与中国关系的新篇章](/articles/voa/1014148.md)
+
+7-13 [南中国海问题国际仲裁决定八周年之际，美国再次呼吁中国停止危险行为](/articles/voa/1014149.md)
+
 7-13 [众院通过法案禁止非公民投票，投票权倡导者：此举无必要且有恐吓作用](/articles/voa/1014150.md)
 
 7-13 [中共20届三中全会将在对消费疲软、产能过剩的担忧中召开](/articles/voa/1014151.md)
@@ -592,12 +600,4 @@
 7-1 [中国救房市出奇招 算盘打到农村宅基地上](/articles/voa/1014444.md)
 
 7-1 [中国将052D舰改成海警船? 分析：中国海警恐常态化远航](/articles/voa/1014445.md)
-
-7-1 [朝鲜国家电视播送摒弃中国卫星，转用俄罗斯卫星](/articles/voa/1014446.md)
-
-7-1 [回应越南对话意愿，菲律宾准备与河内就南中国海海底大陆架延伸问题进行谈判](/articles/voa/1014447.md)
-
-7-1 [聿文视界：三中全会前，中南海对官员再勒紧政治绞索](/articles/voa/1014448.md)
-
-7-1 [法国首轮议会选举中极右翼取得历史性胜利](/articles/voa/1014449.md)
 
