--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -9,7 +9,7 @@
 
 7-12 [三联生活周刊｜女清洁工消失在垃圾压缩箱](/articles/cdt/338957.md)
 
-7-12 [群己论实｜新京报记者韩福涛危险了](/articles/cdt/338962.md)
+7-12 [【404文库】群己论实｜新京报记者韩福涛危险了](/articles/cdt/338962.md)
 
 7-12 [朵尔日记｜食用油里掺入煤油对身体有多大危害？](/articles/cdt/338964.md)
 
