--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -7,6 +7,8 @@
 
 7-13 [竹不倒｜让底层自己去解决问题？不仅讽刺，还越来越多……](/articles/cdt/338927.md)
 
+7-13 [人文经济学堂｜梁建章：中国经济急需发钱消费](/articles/cdt/338940.md)
+
 7-12 [城市的地得｜想象中的惩罚](/articles/cdt/338952.md)
 
 7-12 [南方周末｜警权“扩”与“限”：治安管理处罚法大修，十万人提出建议](/articles/cdt/338954.md)
@@ -598,6 +600,4 @@
 6-3 [冰川思享号｜斯坦福博士报考乡镇公务员，一个多么残酷的选择](/articles/cdt/340091.md)
 
 6-3 [风声OPINION丨对待网约车，为何中央政府松，地方政府紧？](/articles/cdt/340093.md)
-
-6-3 [码头水鬼｜徐辉将军，咱们国家也被侵略过……](/articles/cdt/340095.md)
 
