--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+7-14 [前总统特朗普在遭遇枪击后，拜登总统发表声明强烈谴责政治暴力](/articles/voa/1014122.md)
+
+7-14 [以色列针对哈马斯军事指挥官的袭击导致加沙南部至少90人死亡](/articles/voa/1014123.md)
+
+7-14 [前总统特朗普竞选造势遇袭 美国会两党议员同声谴责政治暴力](/articles/voa/1014124.md)
+
 7-14 [前总统唐纳德·特朗普在遭遇暗杀企图后受伤但“安全”](/articles/voa/1014125.md)
 
 7-14 [特朗普竞选活动上传枪响，竞选团队称特朗普目前情况良好](/articles/voa/1014126.md)
@@ -594,10 +600,4 @@
 7-2 [美中合作之下 联大通过中国关于加强国际合作缩小AI能力建设差距的决议](/articles/voa/1014420.md)
 
 7-2 [习近平访问哈萨克斯坦，出席上合组织峰会](/articles/voa/1014421.md)
-
-7-2 [中国拟议中的《金融稳定法》是什么？](/articles/voa/1014422.md)
-
-7-2 [拜登抨击美国最高法院关于特朗普豁免权案的裁决](/articles/voa/1014423.md)
-
-7-2 [朝鲜宣称成功试射可携带“超大型弹头”的“火星-11”导弹](/articles/voa/1014424.md)
 
