--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-14 [【404文库】基本常识｜中国2100万美元援建瓦努阿图总统府，该国人口33万](/articles/cdt/338906.md)
+
 7-13 [中国新闻周刊｜“苕萝卜”占比不到1%，武汉司机为何慌了？](/articles/cdt/338915.md)
 
 7-13 [衣者朝新｜对新京报最好的保护不是赞美](/articles/cdt/338916.md)
@@ -598,6 +600,4 @@
 6-4 [万安公墓“六四”难属｜“六四”35周年万安公墓祭文](/articles/cdt/340037.md)
 
 6-4 [【404文库·六四特辑】“如今这个广场是我的坟墓，这个歌声将来是你的挽歌”](/articles/cdt/340079.md)
-
-6-3 [每日一语 2024.6.3](/articles/cdt/340085.md)
 
