--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+7-14 [菲律宾参议院下令逮捕涉嫌与中国犯罪集团有关的华裔市长](/articles/voa/1014118.md)
+
+7-14 [兴奋剂丑闻阴影下 中国代表队着眼巴黎奥运霸主地位](/articles/voa/1014119.md)
+
+7-14 [联邦调查局负责对特朗普在竞选集会上遇刺未遂事件的调查](/articles/voa/1014120.md)
+
 7-14 [特朗普遭遇行刺未遂事件 美国华人选民怎么看？](/articles/voa/1014121.md)
 
 7-14 [前总统特朗普在遭遇枪击后，拜登总统发表声明强烈谴责政治暴力](/articles/voa/1014122.md)
@@ -594,10 +600,4 @@
 7-2 [印度总理莫迪将缺席上合组织峰会，由外长代表出席](/articles/voa/1014416.md)
 
 7-2 [匈牙利总理欧尔班在俄乌开战后首访乌克兰，与泽连斯基会谈](/articles/voa/1014417.md)
-
-7-2 [鹬蚌相争，渔翁得利：南太岛国凭借其战略位置获利多多](/articles/voa/1014418.md)
-
-7-2 [制造业调查显示6月份中国经济虽增长，但速度缓慢](/articles/voa/1014419.md)
-
-7-2 [美中合作之下 联大通过中国关于加强国际合作缩小AI能力建设差距的决议](/articles/voa/1014420.md)
 
