--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-14 [特朗普遇袭后，共和党全国大会是否受影响？](/articles/voa/1014117.md)
+
 7-14 [菲律宾参议院下令逮捕涉嫌与中国犯罪集团有关的华裔市长](/articles/voa/1014118.md)
 
 7-14 [兴奋剂丑闻阴影下 中国代表队着眼巴黎奥运霸主地位](/articles/voa/1014119.md)
@@ -598,6 +600,4 @@
 7-2 [梵蒂冈呼吁菲中和平解决纠纷，马尼拉：维护主权“绝不留情”](/articles/voa/1014415.md)
 
 7-2 [印度总理莫迪将缺席上合组织峰会，由外长代表出席](/articles/voa/1014416.md)
-
-7-2 [匈牙利总理欧尔班在俄乌开战后首访乌克兰，与泽连斯基会谈](/articles/voa/1014417.md)
 
