--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+7-14 [数百人走上巴黎街头 纪念在俄乌战争中阵亡的乌克兰运动员](/articles/voa/1014112.md)
+
+7-14 [北约与中国的竞争在华盛顿峰会后加剧](/articles/voa/1014113.md)
+
+7-14 [联邦调查局确认特朗普刺杀未遂案嫌疑人身份](/articles/voa/1014114.md)
+
 7-14 [中国官媒批机构疯抢国债是做空经济](/articles/voa/1014115.md)
 
 7-14 [克宫挟欧洲各国首都 反制美国在德国部署导弹](/articles/voa/1014116.md)
@@ -594,10 +600,4 @@
 7-3 [中国游泳队将在兴奋剂丑闻的阴影下参加巴黎奥运会](/articles/voa/1014410.md)
 
 7-3 [记者手记： 以色列华裔人质诺雅·阿加玛尼的母亲在女儿获救几周后去世](/articles/voa/1014411.md)
-
-7-3 [美国政府多年来首次包机将非法入境中国人遣返回国](/articles/voa/1014412.md)
-
-7-3 [中菲南中国海冲突再升级 专家:双方皆不愿意挑起大规模战争](/articles/voa/1014413.md)
-
-7-3 [仇日情绪升温 怕失控中国出手打击极端言论](/articles/voa/1014414.md)
 
