--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-15 [衣者褚｜当人丧失良知之后](/articles/cdt/338880.md)
+
+7-15 [往事与随想｜新闻传播的“两种闭环”：从改变社会到改变媒体](/articles/cdt/338882.md)
+
 7-15 [每日一语 2024.7.14](/articles/cdt/338885.md)
 
 7-14 [极昼工作室｜农村医保「催缴员」：380元的现实重量](/articles/cdt/338899.md)
@@ -596,8 +600,4 @@
 6-5 [【CDT图集】六四35周年纪念作品：献给为自由抗争的人们](/articles/cdt/339999.md)
 
 6-4 [每日一语 2024.6.4](/articles/cdt/340001.md)
-
-6-4 [【404帖子】多国驻华大使馆悼念“六四”，部分贴文遭秒删](/articles/cdt/340019.md)
-
-6-6 [三联生活周刊｜恒大5600亿元造假创全球历史，是怎么做到的？](/articles/cdt/340020.md)
 
