--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-15 [三中全会开幕，看点在哪？难点何在？](/articles/voa/1014101.md)
+
 7-15 [拜登在特朗普遭遇刺杀企图后谴责政治暴力，呼吁团结](/articles/voa/1014102.md)
 
 7-15 [美国寻找对特朗普暗杀企图的动机](/articles/voa/1014103.md)
@@ -598,6 +600,4 @@
 7-3 [监督组织：《苹果日报》案是香港新闻自由衰落的典型例子](/articles/voa/1014399.md)
 
 7-3 [民主党人开始公开对拜登竞选总统表达担忧](/articles/voa/1014400.md)
-
-7-3 [美国会两党议员警告：中共反复用同样伎俩在各关键行业夺得主导地位 美国不能袖手旁观](/articles/voa/1014401.md)
 
