--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-15 [中国第二季度经济增速放缓，消费支出持续疲软](/articles/nyt/1042580.md)
+
 7-15 [关于行刺特朗普的枪手，我们目前所知的](/articles/nyt/1042581.md)
 
 7-15 [在美国的动荡时刻，特朗普遇刺搅动选战](/articles/nyt/1042582.md)
@@ -598,6 +600,4 @@
 4-10 [习近平会见俄罗斯外长，继续深化中俄关系](/articles/nyt/1042878.md)
 
 4-9 [为什么患结直肠癌的年轻人越来越多](/articles/nyt/1042879.md)
-
-4-9 [台积电将获拜登政府66亿美元拨款](/articles/nyt/1042880.md)
 
