--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-15 [民调显示富国疏远中国，年轻人和发展中国家较喜欢中国](/articles/voa/1014088.md)
+
+7-15 [联合国讨论海底矿物资源采矿法，但反对声音不绝于耳](/articles/voa/1014089.md)
+
 7-15 [对俄罗斯持强烈批评态度的卡娅·卡拉斯辞去爱沙尼亚总理职务，接任欧盟首席外交官](/articles/voa/1014090.md)
 
 7-15 [中国6月新建房屋价格下跌幅度创9年新高，市场期待更多支撑政策](/articles/voa/1014091.md)
@@ -596,8 +600,4 @@
 7-3 [习普借上合组织峰会再聚首，进一步深化抗衡美国及西方的联盟](/articles/voa/1014386.md)
 
 7-3 [中国海警扣押违规台湾渔船，分析:中方未来恐软硬兼施，强化对台法律战论述](/articles/voa/1014387.md)
-
-7-3 [香港主权移交27周年 民调指过半港人对前途无信心 免于恐惧自由评分大跌](/articles/voa/1014388.md)
-
-7-3 [希音是美国公司还是中国公司？](/articles/voa/1014389.md)
 
