--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 7-16 [每日一语 2024.7.15](/articles/cdt/338845.md)
 
+7-16 [【翻车现场】穿越者习近平于1978年到安徽调研包产到户](/articles/cdt/338852.md)
+
 7-15 [【404文库】“令人忧心的是，当食品安全问题还远远没能放心，我们可能已经面临调查记者凋零的现状了”（外二篇）](/articles/cdt/338856.md)
 
 7-15 [历史押韵｜无厘头炒股？川普遇刺，川大智胜涨停](/articles/cdt/338859.md)
@@ -598,6 +600,4 @@
 6-7 [每日一语 2024.6.6](/articles/cdt/339863.md)
 
 6-7 [罗翔｜聚众淫乱与疑罪从无](/articles/cdt/339866.md)
-
-6-6 [冰川思想号｜董明珠这一代企业家，已无法共情年轻打工人](/articles/cdt/339869.md)
 
