--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-16 [参议员梅嫩德斯被控受贿案的陪审团恢复审议](/articles/voa/1014083.md)
+
 7-16 [欧洲专家分析中共二十届三中全会 -- 继续“逆向改革”?](/articles/voa/1014084.md)
 
 7-16 [泽连斯基紧锣密鼓为第二次乌克兰和平峰会做准备](/articles/voa/1014085.md)
@@ -598,6 +600,4 @@
 7-4 [印度能在莫迪的第三个任期内解决与中国的边界问题吗？](/articles/voa/1014381.md)
 
 7-4 [加沙人上路逃亡,以色列空袭加沙中部与北部](/articles/voa/1014382.md)
-
-7-4 [中欧电动车关税谈判进入最后一刻，中国厂商面临重击](/articles/voa/1014383.md)
 
