--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-16 [十点读书会｜90后女孩在法国捡垃圾吃，捡一次吃一周，全网都在羡慕](/articles/cdt/338840.md)
+
 7-16 [每日一语 2024.7.15](/articles/cdt/338845.md)
 
 7-16 [【翻车现场】穿越者习近平于1978年到安徽调研包产到户](/articles/cdt/338852.md)
@@ -598,6 +600,4 @@
 6-7 [建设性意见｜反腐救不了中国足球](/articles/cdt/339861.md)
 
 6-7 [每日一语 2024.6.6](/articles/cdt/339863.md)
-
-6-7 [罗翔｜聚众淫乱与疑罪从无](/articles/cdt/339866.md)
 
