--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-16 [每日一语 2024.7.16](/articles/cdt/338822.md)
+
 7-16 [看理想｜这次是食用油混装，下次会是什么？](/articles/cdt/338834.md)
 
 7-16 [【404文库】码头青年｜穷追猛打！别让油的关注度被稀释转移](/articles/cdt/338836.md)
@@ -598,6 +600,4 @@
 6-8 [北青深一度｜离婚诉讼中，被层层“消解”的家暴｜深度报道](/articles/cdt/339850.md)
 
 6-8 [建设性意见｜高考零分作文：坦诚交流不是想不想，而是能不能的问题](/articles/cdt/339853.md)
-
-6-7 [【CDT报告汇】为什么中国当局不采取更多措施提振经济 ？“不知道”、“没办法”、“无所谓”和“我说的对”（外二篇）](/articles/cdt/339857.md)
 
