--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-16 [假如我是总统：特朗普的竞选承诺](/articles/dw/1024875.md)
+
 7-16 [在特朗普提名大会上的德国议员：美国仍是欧洲的安全保障](/articles/dw/1024876.md)
 
 7-16 [将特朗普置于“靶心”？枪击案后拜登承认用词有误](/articles/dw/1024877.md)
@@ -598,6 +600,4 @@
 6-19 [墨西哥毒販勾結中國地下錢莊洗錢 遭美國破獲](/articles/dw/1025173.md)
 
 6-18 [美国国会议员代表团访问达兰萨拉](/articles/dw/1025174.md)
-
-6-18 [客座评论：普京访问朝鲜 中国会“吃醋”吗？](/articles/dw/1025175.md)
 
