--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-16 [英国将强化武装力量，应对中俄伊朝“致命四重奏”威胁](/articles/voa/1014055.md)
+
 7-16 [菲律宾和中国同意设立两国元首热线，防止冲突失控](/articles/voa/1014056.md)
 
 7-16 [中国斡旋哈马斯和法塔赫谈判 促使双方实现和解团结](/articles/voa/1014057.md)
@@ -598,6 +600,4 @@
 7-5 [出口民调：苏纳克的保守党惨败，工党领袖斯塔默将成为英国首相](/articles/voa/1014353.md)
 
 7-5 [民兵组织袭击刚果金矿，打死六名中国矿工和两名刚果军人](/articles/voa/1014354.md)
-
-7-5 [真主党发动火箭袭击后，以色列打击黎巴嫩南部](/articles/voa/1014355.md)
 
