--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-17 [拜登选情遭遇严重挫折，规模庞大的汽车司机工会可能拒绝为他背书](/articles/voa/1014052.md)
+
+7-17 [大国贸易战此起彼伏，台湾企业加速将供应链从中国迁往印度](/articles/voa/1014053.md)
+
 7-16 [万斯首次接受媒体采访，强调中国是美国“最大威胁”](/articles/voa/1014054.md)
 
 7-16 [英国将强化武装力量，应对中俄伊朝“致命四重奏”威胁](/articles/voa/1014055.md)
@@ -596,8 +600,4 @@
 7-5 [“我不仅是为我发声”：法轮功学员在华盛顿讲述遭中共强摘器官经历](/articles/voa/1014350.md)
 
 7-5 [北约峰会下周开幕，印太与乌克兰将是中心议题](/articles/voa/1014351.md)
-
-7-5 [国际泳联证实美联邦政府已对中国游泳运动员兴奋剂检测阳性事件展开刑事调查](/articles/voa/1014352.md)
-
-7-5 [出口民调：苏纳克的保守党惨败，工党领袖斯塔默将成为英国首相](/articles/voa/1014353.md)
 
