--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-26 [哈里斯敦促内塔尼亚胡结束加沙战争](/articles/voa/1013797.md)
+
 7-26 [墨西哥大毒枭在美国得克萨斯州被捕](/articles/voa/1013798.md)
 
 7-26 [中国罕见地赞扬菲律宾总统禁止中国在线赌博运营商](/articles/voa/1013799.md)
@@ -598,6 +600,4 @@
 7-15 [三中全会登场 中共出台何种经济措施备受关注](/articles/voa/1014095.md)
 
 7-15 [共和党全国大会首日预计将关注经济议题](/articles/voa/1014096.md)
-
-7-15 [北约指责中国是俄乌战争“决定性助推者”后，中俄展开联合海军演习](/articles/voa/1014097.md)
 
