--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-26 [赛前禁欲？床上运动有助运动员临场发挥](/articles/dw/1024785.md)
+
 7-26 [中印關係好轉？雙邊外長：盡早解決邊境問題](/articles/dw/1024786.md)
 
 7-26 [法塔赫和哈马斯签署《北京宣言》](/articles/dw/1024787.md)
@@ -598,6 +600,4 @@
 6-26 [OpenAI将停止对中国开发者提供服务](/articles/dw/1025083.md)
 
 6-26 [媒体：欧盟“微调”对华电动车关税](/articles/dw/1025084.md)
-
-6-26 [荷兰“不粘锅”将出任新一届北约秘书长](/articles/dw/1025085.md)
 
