--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-26 [中国人工智能进步加速，正缩小与美国差距](/articles/nyt/1042540.md)
+
 7-26 [中俄轰炸机在阿拉斯加附近巡逻，美国加拿大出动战机拦截](/articles/nyt/1042541.md)
 
 7-26 [中国央行意外下调关键利率，试图提振经济](/articles/nyt/1042542.md)
@@ -598,6 +600,4 @@
 4-23 [中国经济放缓，拼多多实现“逆袭”](/articles/nyt/1042838.md)
 
 4-22 [关于中国的出口优势，你应该知道的](/articles/nyt/1042839.md)
-
-4-22 [陷入禁药争议，中国游泳选手的奥运奖牌会被收回吗](/articles/nyt/1042840.md)
 
