--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+7-26 [巴黎奥运开幕在即 法国高速铁路网遭“大规模袭击“](/articles/dw/1024782.md)
+
+7-26 [德国男子在白俄罗斯被判死刑后“电视认罪”](/articles/dw/1024783.md)
+
 7-26 [巴黎奥运开幕在即 法国高速铁路网遭“大规模袭击](/articles/dw/1024784.md)
 
 7-26 [赛前禁欲？床上运动有助运动员临场发挥](/articles/dw/1024785.md)
@@ -596,8 +600,4 @@
 6-27 [回應「懲治台獨」措施 台灣調升赴中旅遊警示](/articles/dw/1025080.md)
 
 6-27 [马科斯：除了对北京抗议 菲律宾需要做更多](/articles/dw/1025081.md)
-
-6-27 [足球盛宴 让德国基础设施不堪重负](/articles/dw/1025082.md)
-
-6-26 [OpenAI将停止对中国开发者提供服务](/articles/dw/1025083.md)
 
