--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-26 [美国芯片为何仍流入俄罗斯？香港空壳公司背后的秘密链条](/articles/nyt/1042538.md)
+
 7-26 [强大的女性让特朗普“抓狂”](/articles/nyt/1042539.md)
 
 7-26 [中国人工智能进步加速，正缩小与美国差距](/articles/nyt/1042540.md)
@@ -598,6 +600,4 @@
 4-23 [三名德国公民涉嫌为中国安全部门收集敏感数据被捕](/articles/nyt/1042836.md)
 
 4-23 [台湾接连发生余震，最强震级6.3级](/articles/nyt/1042837.md)
-
-4-23 [中国经济放缓，拼多多实现“逆袭”](/articles/nyt/1042838.md)
 
