--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-26 [巴黎奥运开幕前几小时，法国高铁遭纵火破坏](/articles/voa/1013792.md)
+
+7-26 [南中国海局势升温之际东盟外长与王毅会晤](/articles/voa/1013793.md)
+
 7-26 [奥巴马夫妇支持哈里斯代表民主党参加2024美国总统大选](/articles/voa/1013794.md)
 
 7-26 [韩国央行估计朝鲜经济在经历多年萎缩后于2023年实现增长](/articles/voa/1013795.md)
@@ -596,8 +600,4 @@
 7-15 [对俄罗斯持强烈批评态度的卡娅·卡拉斯辞去爱沙尼亚总理职务，接任欧盟首席外交官](/articles/voa/1014090.md)
 
 7-15 [中国6月新建房屋价格下跌幅度创9年新高，市场期待更多支撑政策](/articles/voa/1014091.md)
-
-7-15 [不满美国新能源汽车补贴等措施，中国要求世贸设立专家组解决相关争议](/articles/voa/1014092.md)
-
-7-15 [聿文视界：“油罐车”与三中全会](/articles/voa/1014093.md)
 
