--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+7-26 [“最后一代”封堵机场 政界呼吁严惩肇事者](/articles/dw/1024777.md)
+
+7-26 [泽连斯基：“我们必须尽快结束战争”](/articles/dw/1024778.md)
+
 7-26 [德语媒体：《北京宣言》和“复苏乏力”](/articles/dw/1024779.md)
 
 7-26 [2024巴黎奥运会：你需要知道的一切](/articles/dw/1024780.md)
@@ -596,8 +600,4 @@
 6-27 [中国称欢迎各国科学家研究月球样本](/articles/dw/1025075.md)
 
 6-27 [电动车关税争端：德国总理建议欧中征收同等关税](/articles/dw/1025076.md)
-
-6-27 [中国宣布三中全会日期 中央政治局会议政治“挂帅“](/articles/dw/1025077.md)
-
-6-27 [李尚福、魏凤和：中国两位前国防部长同一日被开除党籍](/articles/dw/1025078.md)
 
