--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-26 [王毅称中日关系处于“关键阶段”，日外相要求中国释放日本公民](/articles/voa/1013791.md)
+
 7-26 [巴黎奥运开幕前几小时，法国高铁遭纵火破坏](/articles/voa/1013792.md)
 
 7-26 [南中国海局势升温之际东盟外长与王毅会晤](/articles/voa/1013793.md)
@@ -598,6 +600,4 @@
 7-15 [联合国讨论海底矿物资源采矿法，但反对声音不绝于耳](/articles/voa/1014089.md)
 
 7-15 [对俄罗斯持强烈批评态度的卡娅·卡拉斯辞去爱沙尼亚总理职务，接任欧盟首席外交官](/articles/voa/1014090.md)
-
-7-15 [中国6月新建房屋价格下跌幅度创9年新高，市场期待更多支撑政策](/articles/voa/1014091.md)
 
