--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-27 [巴黎奥运会上的乌克兰运动员：为追逐梦想而喜，为战争残酷而悲](/articles/voa/1013785.md)
+
+7-27 [美军扩充和强化澳大利亚北部军事基地 为南中国海爆发冲突做准备](/articles/voa/1013786.md)
+
 7-27 [土耳其逮捕维吾尔难民人数激增，跟中土两国加强经济和反恐联系有关？](/articles/voa/1013787.md)
 
 7-27 [印中外长同意抓紧努力，尽快完成从争议边界撤军](/articles/voa/1013788.md)
@@ -596,8 +600,4 @@
 7-16 [参议员梅嫩德斯被控受贿案的陪审团恢复审议](/articles/voa/1014083.md)
 
 7-16 [欧洲专家分析中共二十届三中全会 -- 继续“逆向改革”?](/articles/voa/1014084.md)
-
-7-16 [泽连斯基紧锣密鼓为第二次乌克兰和平峰会做准备](/articles/voa/1014085.md)
-
-7-16 [中共三中全会北京召开 公布经济增速5%实质意义有多少？](/articles/voa/1014086.md)
 
