--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-27 [亮见｜堂堂乡党委书记，居然都需要网络举报了](/articles/cdt/338540.md)
+
+7-27 [【404文库】雷叔写故事｜体育生搅浑了投行](/articles/cdt/338542.md)
+
 7-27 [每日一语 2024.7.25](/articles/cdt/338544.md)
 
 7-27 [【CDT报告汇】保卫民主基金会：南海威慑不足可能引发地区冲突](/articles/cdt/338554.md)
@@ -596,8 +600,4 @@
 6-18 [每日一语 2024.6.17](/articles/cdt/339552.md)
 
 6-17 [28号楼｜卫健委的倡议，到底伤了谁？](/articles/cdt/339554.md)
-
-6-17 [筑基政经｜倒查30年后补税是个危险信号](/articles/cdt/339557.md)
-
-6-17 [华尔街俱乐部｜美国风投要求「海外中国创始人」与中国投资机构做切割](/articles/cdt/339559.md)
 
